# dearborn

./: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  MILESTONE_1.md  README.md  SCRATCHPAD.md  VISION.md  justfile
.pi-subagents/artifacts/: 2699715b_worker_0_input.md  2699715b_worker_0_meta.json  2699715b_worker_0_output.md  2699715b_worker_0_transcript.jsonl  46dbb425_reviewer_0_input.md  46dbb425_reviewer_0_meta.json  46dbb425_reviewer_0_transcript.jsonl  63ccd37b_reviewer_0_input.md  63ccd37b_reviewer_0_meta.json  63ccd37b_reviewer_0_transcript.jsonl  a150fb9d_worker_0_input.md  a150fb9d_worker_0_meta.json  a150fb9d_worker_0_transcript.jsonl  bcef88c3_delegate_0_input.md  bcef88c3_delegate_0_meta.json  bcef88c3_delegate_0_output.md  bcef88c3_delegate_0_transcript.jsonl  d750c19e_delegate_0_input.md  d750c19e_delegate_0_meta.json  d750c19e_delegate_0_transcript.jsonl
.pi-subagents/artifacts/outputs/bcef88c3/file-only:/Users/josiahcampbell/projects/personal/deerborn/.pi-subagents/: t303-review.md
client/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/src/: App.vue  main.ts
client/src/api/: board.ts  client.ts  epics.ts  projects.ts  tasks.ts
client/src/board/: dnd.ts  epicLanes.ts  stream.ts  useBoardStream.ts
client/src/components/: AppIcon.vue  AppLogo.vue  AppModal.vue  AppShell.vue  CloneStatusBadge.vue  ConfirmModal.vue  CreateEpicModal.vue  CreateProjectForm.vue  DagEditorView.vue  EpicDetailView.vue  EpicKanbanView.vue  EpicTabs.vue  PlanningView.vue  ProjectDetailView.vue  ProjectKanbanView.vue  ProjectsView.vue  StatusIcon.vue  TaskModal.vue  TokenGate.vue
client/src/dag/: stream.ts  useDagStream.ts
client/src/lib/: epicEdit.ts  markdown.ts
client/src/planning/: stream.ts  useEpicStream.ts
client/src/router/: index.ts
client/src/stores/: auth.ts  health.ts  projects.ts
client/src/styles/: base.css  tokens.css  ui.css
client/test/: board.test.ts  dag.test.ts  dnd.test.ts  epic-details.test.ts  epic-kanban.test.ts  stream.test.ts
dearborn-server/: Cargo.toml
dearborn-server/src/: board.rs  crypto.rs  db.rs  epics.rs  error.rs  git.rs  lanes.rs  lib.rs  mcp.rs  ws.rs
dearborn-server/tests/: mcp_live.rs  ws.rs
deerborn-server/: CONVENTIONS.md  Cargo.toml
deerborn-server/migrations/: 0001_baseline.sql  0002_planning_session.sql  0003_epic_description.sql
deerborn-server/src/: auth.rs  board.rs  breakdown.rs  config.rs  crypto.rs  db.rs  epics.rs  error.rs  git.rs  hub.rs  lanes.rs  lib.rs  main.rs  mcp.rs  planning.rs  projects.rs  tasks.rs  worker.rs  ws.rs
deerborn-server/tests/: mcp_live.rs  ws.rs
docs/spikes/: T-200-agent-harness.md
references/: ralph-v2.sh  ralph.sh
references/prompts/: code-review.md  commit.md  fix-task-v2.md  grill-me.md  gtl.md  implement-next-task.md  implement-task-v2.md  judge-review-v2.md  plan.md  review-task-v2.md  to-prd.md  to-tasks.md  verify-complete-v2.md
spikes/t200-agent-harness/: Cargo.toml
spikes/t200-agent-harness/src/: mcp_config_demo.rs  multi_turn.rs
