[workspace]
resolver = "2"
members = ["deerborn-server"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
libsql = { version = "0.9", default-features = false, features = ["core"] }
