[workspace]
resolver = "2"
members = ["deerborn-server"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
tokio-tungstenite = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
libsql = { version = "0.9", default-features = false, features = ["core"] }
ulid = "1"
# Agent runtime — shells out to Claude Code. Pinned exact (pre-1.0, churny;
# imported as `harness`). See docs/spikes/T-200-agent-harness.md.
agent-harness = "=0.3.5"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
aes-gcm = "0.10"
sha2 = "0.10"
base64 = "0.22"
